Fixed issue with incomplete TOML outputs
Toml output files had mislabeled dictionary keys.

--- a/pbdr_v1/NET_v_Elevation.ipynb
+++ b/pbdr_v1/NET_v_Elevation.ipynb
@@ -11,6 +11,8 @@
     "import yaml\n",
     "import toml\n",
     "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "from IPython.core.display import display, HTML\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline  \n",
@@ -102,14 +104,14 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
-    "\n",
-    "      \n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
+    "  \n",
     "#plot\n",
     "plt.clf()\n",
     "n_chan = len(ch_names)\n",
@@ -212,12 +214,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -246,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -322,12 +327,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -359,20 +365,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "toml_output ={}\n",
-    "toml_output['runtime'] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
-    "toml_output['input_id'] = version_date\n",
-    "toml_output['variation'] = out_param + '_v_' + in_param\n",
+    "telescopes[\"runtime\"] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
+    "telescopes[\"input_id\"] = version_date\n",
+    "telescopes[\"variation\"] = out_param + '_v_' + in_param\n",
     "\n",
-    "for telescope in telescopes.keys():\n",
-    "    key = telescope.partition('.')[0]\n",
-    "    toml_output[key] = telescopes[telescope]\n",
-    "\n",
-    "    \n",
-    "output_file_name = toml_output['variation'] + '.toml'\n",
+    "output_file_name = telescopes['variation'] + '.toml'\n",
     "\n",
     "with open('outputs/' + output_file_name, \"w\") as toml_file:\n",
-    "    toml.dump(toml_output, toml_file)"
+    "    toml.dump(telescopes, toml_file, encoder=toml.TomlNumpyEncoder())"
    ]
   }
  ],
