--- a/pbdr_v1/NET_v_PWV.ipynb
+++ b/pbdr_v1/NET_v_PWV.ipynb
@@ -16,11 +16,11 @@
     "%matplotlib inline  \n",
     "plt.rcParams.update({'font.size': 18})\n",
     "plt.rcParams['figure.figsize'] = [12, 20]\n",
-    "\n",
+    "import pdb\n",
     "# bolo-calc import\n",
     "from bolo import Top\n",
     "\n",
-    "telescopes = dict.fromkeys(['CHLAT_20210401.yaml', 'SPLAT_20210401.yaml', 'SAT_pole_20210401.yaml'])"
+    "telescopes = dict.fromkeys(['CHLAT_20210401', 'SPLAT_20210401', 'SAT_pole_20210401'])"
    ]
   },
   {
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "yaml_file = list(telescopes.keys())[0]\n",
+    "yaml_file = list(telescopes.keys())[0] + '.yaml'\n",
     "dd = yaml.safe_load(open(yaml_file))\n",
     "version_date = str(dd['version']['date'])\n",
     "version_telescope = str(dd['version']['name'])\n",
@@ -102,12 +102,16 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -152,7 +156,7 @@
     }
    ],
    "source": [
-    "yaml_file = list(telescopes.keys())[1]\n",
+    "yaml_file = list(telescopes.keys())[1] + '.yaml'\n",
     "dd = yaml.safe_load(open(yaml_file))\n",
     "version_date = str(dd['version']['date'])\n",
     "version_telescope = str(dd['version']['name'])\n",
@@ -212,12 +216,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -262,7 +267,7 @@
     }
    ],
    "source": [
-    "yaml_file = list(telescopes.keys())[2]\n",
+    "yaml_file = list(telescopes.keys())[2] + '.yaml'\n",
     "dd = yaml.safe_load(open(yaml_file))\n",
     "version_date = str(dd['version']['date'])\n",
     "version_telescope = str(dd['version']['name'])\n",
@@ -322,12 +327,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -359,20 +365,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "toml_output ={}\n",
-    "toml_output['runtime'] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
-    "toml_output['input_id'] = version_date\n",
-    "toml_output['variation'] = out_param + '_v_' + in_param\n",
     "\n",
-    "for telescope in telescopes.keys():\n",
-    "    key = telescope.partition('.')[0]\n",
-    "    toml_output[key] = telescopes[telescope]\n",
+    "telescopes[\"runtime\"] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
+    "telescopes[\"input_id\"] = version_date\n",
+    "telescopes[\"variation\"] = out_param + '_v_' + in_param\n",
     "\n",
-    "    \n",
-    "output_file_name = toml_output['variation'] + '.toml'\n",
+    "output_file_name = telescopes['variation'] + '.toml'\n",
     "\n",
     "with open('outputs/' + output_file_name, \"w\") as toml_file:\n",
-    "    toml.dump(toml_output, toml_file)"
+    "    toml.dump(telescopes, toml_file, encoder=toml.TomlNumpyEncoder())"
    ]
   },
   {
