--- a/pbdr_v1/NET_v_DetectorEfficiency.ipynb
+++ b/pbdr_v1/NET_v_DetectorEfficiency.ipynb
@@ -106,12 +106,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -221,12 +222,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -336,12 +338,13 @@
     "io_dict = dict.fromkeys([in_param, out_param])\n",
     "channel_dict = dict.fromkeys(ch_names)\n",
     "\n",
-    "for chan in ch_names: \n",
-    "    channel_dict[chan] = io_dict\n",
-    "    channel_dict[chan][in_param] = param_vec\n",
-    "    channel_dict[chan][out_param] = np.array(outputs[out_param][chan])\n",
+    "io_dict[in_param] = channel_dict.copy()\n",
+    "io_dict[out_param] = channel_dict.copy()\n",
+    "for channel in ch_names:\n",
+    "    io_dict[in_param][channel] = param_vec\n",
+    "    io_dict[out_param][channel] = np.array(outputs[out_param][channel])\n",
     "\n",
-    "telescopes[yaml_file] = channel_dict\n",
+    "telescopes[yaml_file.partition('.')[0]] = io_dict\n",
     "\n",
     "      \n",
     "#plot\n",
@@ -374,28 +377,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "toml_output ={}\n",
-    "toml_output['runtime'] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
-    "toml_output['input_id'] = version_date\n",
-    "toml_output['variation'] = out_param + '_v_' + in_param\n",
+    "telescopes[\"runtime\"] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
+    "telescopes[\"input_id\"] = version_date\n",
+    "telescopes[\"variation\"] = out_param + '_v_' + in_param\n",
     "\n",
-    "for telescope in telescopes.keys():\n",
-    "    key = telescope.partition('.')[0]\n",
-    "    toml_output[key] = telescopes[telescope]\n",
-    "\n",
-    "    \n",
-    "output_file_name = toml_output['variation'] + '.toml'\n",
+    "output_file_name = telescopes['variation'] + '.toml'\n",
     "\n",
     "with open('outputs/' + output_file_name, \"w\") as toml_file:\n",
-    "    toml.dump(toml_output, toml_file)"
+    "    toml.dump(telescopes, toml_file, encoder=toml.TomlNumpyEncoder())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
