Fixed issue with toml output

--- a/pbdr_v1/NET_v_DetectorEfficiency_v2.ipynb
+++ b/pbdr_v1/NET_v_DetectorEfficiency_v2.ipynb
@@ -186,8 +186,8 @@
    "outputs": [],
    "source": [
     "toml_output ={}\n",
-    "toml_output['runtime'] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
-    "toml_output['input_id'] = version_date\n",
+    "telescopes['runtime'] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
+    "telesco['input_id'] = version_date\n",
     "toml_output['variation'] = yparam_name + '_v_' + xparam_name\n",
     "\n",
     "for telescope in telescopes.keys():\n",
