--- a/pbdr_v1/NET_v_DetectorEfficiency_v2.ipynb
+++ b/pbdr_v1/NET_v_DetectorEfficiency_v2.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# NET vs Dector Efficiency\n",
-    "Calculate and plot for each of the three telescopes, then save all three to a toml file."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -185,19 +177,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "toml_output ={}\n",
-    "telescopes['runtime'] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
-    "telesco['input_id'] = version_date\n",
-    "toml_output['variation'] = yparam_name + '_v_' + xparam_name\n",
+    "telescopes[\"runtime\"] = datetime.today().strftime('%Y/%m/%d %H:%M:%S')\n",
+    "telescopes[\"input_id\"] = version_date\n",
+    "telescopes[\"variation\"] = yparam_name + '_v_' + xparam_name\n",
     "\n",
-    "for telescope in telescopes.keys():\n",
-    "    key = telescope.partition('.')[0]\n",
-    "    toml_output[key] = telescopes[telescope]\n",
-    "\n",
-    "output_file_name = toml_output['variation'] + '.toml'\n",
+    "output_file_name = telescopes['variation'] + '.toml'\n",
     "\n",
     "with open('outputs/' + output_file_name, \"w\") as toml_file:\n",
-    "    toml.dump(toml_output, toml_file)"
+    "    toml.dump(telescopes, toml_file, encoder=toml.TomlNumpyEncoder())"
    ]
   }
  ],
