Fixing up pbdr_v2 yamls, etc

--- a/pbdr_v2/BaseModel.ipynb
+++ b/pbdr_v2/BaseModel.ipynb
@@ -12,16 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHLAT_20210401.yaml            SAT_pole_20210605.yaml\r\n",
-      "CHLAT_20210401_hexrhombLF.yaml SPLAT_20210401.yaml\r\n",
-      "SAT_pole_20210401.yaml         SPLAT_20210401_splitbands.yaml\r\n"
+      "CHLAT_20210605.yaml    SAT_pole_20210605.yaml SPLAT_20210605.yaml\r\n"
      ]
     }
    ],
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -441,10 +439,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.6862   3.965    4.401   12.19915 33.308   47.63635]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find average Psats for CHLAT and LAT\n",
+    "Psat1 = np.array([0.6856, 3.6253, 4.1380, 12.8813, 37.5136, 55.2783])\n",
+    "Psat2 = np.array([0.6868, 4.3047, 4.6640, 11.5170, 29.1024, 39.9944])\n",
+    "Psat = (Psat1+Psat2)/2\n",
+    "print(Psat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5205\n",
+      "12.7501\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the average of the SAT 90's, and SAT 150's\n",
+    "Psat_MF1 = (7.3851 + 7.6559)/2\n",
+    "Psat_MF2 = (12.2077 + 13.2925)/2\n",
+    "print(Psat_MF1)\n",
+    "print(Psat_MF2)"
+   ]
   },
   {
    "cell_type": "code",
