Working on BaseModel, and calculating fixed Psats according to our prescription.

--- a/pbdr_v2/BaseModel.ipynb
+++ b/pbdr_v2/BaseModel.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## bolo-calc debugging notebook \n",
+    "# Run Base Model\n",
     "\n",
-    "Modified 3/29/2021 by JR, from EC's original example notebook.\n",
-    "In this version we try to stick to the minimal amount of setup and results output for debugging purposes."
+    "Run default yaml setup, print out summaries"
    ]
   },
   {
@@ -387,6 +386,7 @@
     "print(top.instrument.pwv.SI)\n",
     "print(\" \")\n",
     "top.instrument.print_summary()\n",
+    "\n",
     "top.instrument.print_optical_output()"
    ]
   },
@@ -715,76 +715,6 @@
     "top.instrument.print_summary()\n",
     "top.instrument.print_optical_output()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "169.11110176613028"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top.instrument.tables['cam_1_LF_1_sims']['NET'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.6862   3.965    4.401   12.19915 33.308   47.63635]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find average Psats for CHLAT and LAT\n",
-    "Psat1 = np.array([0.6856, 3.6253, 4.1380, 12.8813, 37.5136, 55.2783])\n",
-    "Psat2 = np.array([0.6868, 4.3047, 4.6640, 11.5170, 29.1024, 39.9944])\n",
-    "Psat = (Psat1+Psat2)/2\n",
-    "print(Psat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.5205\n",
-      "12.7501\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find the average of the SAT 90's, and SAT 150's\n",
-    "Psat_MF1 = (7.3851 + 7.6559)/2\n",
-    "Psat_MF2 = (12.2077 + 13.2925)/2\n",
-    "print(Psat_MF1)\n",
-    "print(Psat_MF2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
