updated yamls to change UHF->HF, reran fixed psats, and redid basemodel notebook.

--- a/pbdr_v2/SetFixedPsats.ipynb
+++ b/pbdr_v2/SetFixedPsats.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,8 @@
       "LF_2  :     3.63\n",
       "MF_1  :     4.14\n",
       "MF_2  :    12.88\n",
-      "UHF_1 :    37.51\n",
-      "UHF_2 :    55.28\n",
+      "HF_1  :    37.51\n",
+      "HF_2  :    55.28\n",
       " \n",
       "SPLAT     Psat(pW)\n",
       "ULF_1 :     0.41\n",
@@ -74,8 +74,8 @@
       "LF_2  :     4.30\n",
       "MF_1  :     4.66\n",
       "MF_2  :    11.52\n",
-      "UHF_1 :    29.10\n",
-      "UHF_2 :    39.99\n",
+      "HF_1  :    29.10\n",
+      "HF_2  :    39.99\n",
       " \n",
       "SAT_pole  Psat(pW)\n",
       "LF_1  :     1.41\n",
@@ -84,8 +84,8 @@
       "MF1_2 :    12.21\n",
       "MF2_1 :     7.66\n",
       "MF2_2 :    13.29\n",
-      "UHF_1 :    29.96\n",
-      "UHF_2 :    39.16\n",
+      "HF_1  :    29.96\n",
+      "HF_2  :    39.16\n",
       " \n",
       "===========================================================\n",
       "LAT Psats (Average of CHLAT and SPLAT for common bands)\n",
@@ -94,8 +94,8 @@
       "LF_2  :    3.965\n",
       "MF_1  :    4.401\n",
       "MF_2  :   12.199\n",
-      "UHF_1 :   33.308\n",
-      "UHF_2 :   47.636\n",
+      "HF_1  :   33.308\n",
+      "HF_2  :   47.636\n",
       "======================\n",
       "SAT Psats (Average of _1 and _2 in MF bands)\n",
       "LF_1  :    1.408\n",
@@ -104,8 +104,8 @@
       "MF2_1 :    7.520\n",
       "MF1_2 :   12.750\n",
       "MF2_2 :   12.750\n",
-      "UHF_1 :   29.959\n",
-      "UHF_2 :   39.164\n"
+      "HF_1  :   29.959\n",
+      "HF_2  :   39.164\n"
      ]
     }
    ],
@@ -175,8 +175,8 @@
     "fixed_psats[yamlfiles['SAT']]['MF1_2']= avg150\n",
     "fixed_psats[yamlfiles['SAT']]['MF2_2']= avg150\n",
     "\n",
-    "fixed_psats[yamlfiles['SAT']]['UHF_1']= np.round(data['SAT_pole']['UHF_1']['psat'],ddd)\n",
-    "fixed_psats[yamlfiles['SAT']]['UHF_2']= np.round(data['SAT_pole']['UHF_2']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT']]['HF_1']= np.round(data['SAT_pole']['HF_1']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT']]['HF_2']= np.round(data['SAT_pole']['HF_2']['psat'],ddd)\n",
     "\n",
     "for chan in fixed_psats[yamlfiles['SAT']].keys():\n",
     "    print('{0:5s} : {1:8.3f}'.format(chan,fixed_psats[yamlfiles['SAT']][chan]))     \n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
