Splitting SATs into HDPE and Silicon lens versions

--- a/pbdr_v2/RunDefaultConfig.ipynb
+++ b/pbdr_v2/RunDefaultConfig.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHLAT_20210605.yaml    SAT_pole_20210605.yaml SPLAT_20210605.yaml\r\n"
+      "CHLAT_20210605.yaml             SAT_pole_hdpeLFMF_20210622.yaml\r\n",
+      "SAT_pole_20210605.yaml          SPLAT_20210605.yaml\r\n",
+      "SAT_pole_SiHF_20210622.yaml\r\n"
      ]
     }
    ],
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,47 +63,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CHLAT_20210605.yaml\n",
       "CHLAT     Popt(pW) Psat(pW)   NET    NET_wafer\n",
-      "LF_1  :     0.23     0.69   266.90    30.46\n",
-      "LF_2  :     1.21     3.97   224.17    25.58\n",
-      "MF_1  :     1.38     4.40   255.79     9.73\n",
-      "MF_2  :     4.29    12.20   286.57    10.90\n",
-      "HF_1  :    12.50    33.31   659.91    24.09\n",
-      "HF_2  :    18.43    47.64  1646.89    60.12\n",
+      "LF_1  :     0.23     0.00   212.07    24.20\n",
+      "LF_2  :     1.21     0.00   199.85    22.80\n",
+      "MF_1  :     1.38     0.00   228.62     8.70\n",
+      "MF_2  :     4.29     0.00   271.07    10.31\n",
+      "HF_1  :    12.50     0.00   640.42    23.38\n",
+      "HF_2  :    18.43     0.00  1612.21    58.85\n",
       " \n",
+      "SPLAT_20210605.yaml\n",
       "SPLAT     Popt(pW) Psat(pW)   NET    NET_wafer\n",
-      "ULF_1 :     0.14     0.41   329.23    50.09\n",
-      "LF_1  :     0.23     0.69   278.52    31.78\n",
-      "LF_2  :     1.43     3.97   266.22    30.38\n",
-      "MF_1  :     1.55     4.40   283.43    10.78\n",
-      "MF_2  :     3.84    12.20   266.24    10.13\n",
-      "HF_1  :     9.70    33.31   540.46    19.73\n",
-      "HF_2  :    13.33    47.64  1241.72    45.33\n",
+      "ULF_1 :     0.14     0.00   247.98    37.73\n",
+      "LF_1  :     0.23     0.00   213.96    24.41\n",
+      "LF_2  :     1.43     0.00   240.69    27.46\n",
+      "MF_1  :     1.55     0.00   252.92     9.62\n",
+      "MF_2  :     3.84     0.00   246.08     9.36\n",
+      "HF_1  :     9.70     0.00   512.81    18.72\n",
+      "HF_2  :    13.33     0.00  1190.19    43.45\n",
       " \n",
-      "SAT_pole  Popt(pW) Psat(pW)   NET    NET_wafer\n",
-      "LF_1  :     0.56     1.41   169.24    22.00\n",
-      "LF_2  :     2.45     6.13   204.13    26.53\n",
-      "MF1_1 :     2.95     7.52   289.38    18.87\n",
-      "MF1_2 :     4.88    12.75   279.95    18.25\n",
-      "MF2_1 :     3.06     7.52   247.91    16.17\n",
-      "MF2_2 :     5.32    12.75   296.70    19.35\n",
-      "HF_1  :    11.98    29.96   610.44    22.28\n",
-      "HF_2  :    15.67    39.16  1440.43    52.58\n",
-      " \n"
+      "SAT_pole_hdpeLFMF_20210622.yaml\n",
+      "SAT_poleLFMF  Popt(pW) Psat(pW)   NET    NET_wafer\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'SAT_pole_hdpeLFMF_20210622'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-241eb1fff557>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m#convert to Watts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mchannel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mch_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mpsat_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0myamlfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mchannel\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*=\u001b[0m \u001b[0;36m1e-12\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m#set psat factor to None & delete psat entry from channel default\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'SAT_pole_hdpeLFMF_20210622'"
      ]
     }
    ],
    "source": [
     "data = {}\n",
-    "yamlfiles = ['CHLAT_20210605.yaml','SPLAT_20210605.yaml','SAT_pole_20210605.yaml']\n",
+    "yamlfiles = ['CHLAT_20210605.yaml','SPLAT_20210605.yaml','SAT_pole_hdpeLFMF_20210622.yaml','SAT_pole_SiHF_20210622.yaml']\n",
     "for yamlfile in yamlfiles:\n",
+    "    print(yamlfile)\n",
     "    data[yamlfile] = {}\n",
     "    dd = yaml.safe_load(open(yamlfile))\n",
     "    version_date = str(dd['version']['date'])\n",
@@ -173,100 +181,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'defaults': {'Yield': 0.8,\n",
-       "  'Tc': 0.16,\n",
-       "  'waist_factor': 3.0,\n",
-       "  'read_frac': 0.05,\n",
-       "  'site': 'Atacama',\n",
-       "  'elevation': 40.0,\n",
-       "  'pwv': 993.0},\n",
-       " 'LF_1': {'popt': 0.22853271758354834,\n",
-       "  'psat': 0.686,\n",
-       "  'net': 266.8955011894233,\n",
-       "  'netwafer': 30.455143020436257,\n",
-       "  'effic': 0.13664044352797533,\n",
-       "  'nep_photon': 4.497909645527948,\n",
-       "  'nep_phonon': 3.4370230868721707,\n",
-       "  'nep_readout': 1.8123307328134486,\n",
-       "  'Gdyn': 14.071794871794873,\n",
-       "  'corr_fact': 1.2650309686618748,\n",
-       "  'bandcenter': 25.75,\n",
-       "  'fractional_bandwidth': 0.33},\n",
-       " 'LF_2': {'popt': 1.2084248468729688,\n",
-       "  'psat': 3.9650000000000003,\n",
-       "  'net': 224.17016172897019,\n",
-       "  'netwafer': 25.579802978862134,\n",
-       "  'effic': 0.2602520540248846,\n",
-       "  'nep_photon': 16.260753374003748,\n",
-       "  'nep_phonon': 8.263080568407887,\n",
-       "  'nep_readout': 5.83958787749126,\n",
-       "  'Gdyn': 81.33333333333334,\n",
-       "  'corr_fact': 1.0388237770530038,\n",
-       "  'bandcenter': 38.75,\n",
-       "  'fractional_bandwidth': 0.452},\n",
-       " 'MF_1': {'popt': 1.379348526432213,\n",
-       "  'psat': 4.401,\n",
-       "  'net': 255.786017104825,\n",
-       "  'netwafer': 9.729150796021868,\n",
-       "  'effic': 0.1750621975519113,\n",
-       "  'nep_photon': 17.347886415426977,\n",
-       "  'nep_phonon': 8.705547225039021,\n",
-       "  'nep_readout': 6.214129934747013,\n",
-       "  'Gdyn': 90.27692307692307,\n",
-       "  'corr_fact': 1.1418906342064368,\n",
-       "  'bandcenter': 91.5,\n",
-       "  'fractional_bandwidth': 0.317},\n",
-       " 'MF_2': {'popt': 4.293768006138487,\n",
-       "  'psat': 12.199,\n",
-       "  'net': 286.56887422893186,\n",
-       "  'netwafer': 10.900016437086585,\n",
-       "  'effic': 0.353384971928206,\n",
-       "  'nep_photon': 42.25736150138891,\n",
-       "  'nep_phonon': 14.493808108356,\n",
-       "  'nep_readout': 14.302618471470304,\n",
-       "  'Gdyn': 250.2358974358974,\n",
-       "  'corr_fact': 1.0142570410774912,\n",
-       "  'bandcenter': 148.5,\n",
-       "  'fractional_bandwidth': 0.276},\n",
-       " 'HF_1': {'popt': 12.504548767560008,\n",
-       "  'psat': 33.308,\n",
-       "  'net': 659.9085428515208,\n",
-       "  'netwafer': 24.090029835692707,\n",
-       "  'effic': 0.45515522258609603,\n",
-       "  'nep_photon': 96.3446927776662,\n",
-       "  'nep_phonon': 23.949401759491582,\n",
-       "  'nep_readout': 31.784069142947917,\n",
-       "  'Gdyn': 683.2410256410258,\n",
-       "  'corr_fact': 1.0078428187059882,\n",
-       "  'bandcenter': 227.0,\n",
-       "  'fractional_bandwidth': 0.256},\n",
-       " 'HF_2': {'popt': 18.42609008354856,\n",
-       "  'psat': 47.636,\n",
-       "  'net': 1646.8876916127886,\n",
-       "  'netwafer': 60.1198060803309,\n",
-       "  'effic': 0.4540151542613635,\n",
-       "  'nep_photon': 137.35834764111385,\n",
-       "  'nep_phonon': 28.64099060289425,\n",
-       "  'nep_readout': 44.92194626198588,\n",
-       "  'Gdyn': 977.1487179487181,\n",
-       "  'corr_fact': 1.006940243299964,\n",
-       "  'bandcenter': 285.5,\n",
-       "  'fractional_bandwidth': 0.207}}"
+       "{'SAT_pole_20210401': {'LF_1': 1.4,\n",
+       "  'LF_2': 6.13,\n",
+       "  'MF1_1': 7.4,\n",
+       "  'MF1_2': 12.25,\n",
+       "  'MF2_1': 7.65,\n",
+       "  'MF2_2': 13.3,\n",
+       "  'UHF_1': 29.88,\n",
+       "  'UHF_2': 39.03},\n",
+       " 'SPLAT_20210401': {'ULF': 0.42,\n",
+       "  'LF_1': 0.69,\n",
+       "  'LF_2': 4.32,\n",
+       "  'MF_1': 4.65,\n",
+       "  'MF_2': 11.49,\n",
+       "  'UHF_1': 29.31,\n",
+       "  'UHF_2': 40.02},\n",
+       " 'CHLAT_20210401': {'LF_1': 0.72,\n",
+       "  'LF_2': 3.84,\n",
+       "  'MF_1': 4.47,\n",
+       "  'MF_2': 13.95,\n",
+       "  'UHF_1': 41.52,\n",
+       "  'UHF_2': 60.78}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['CHLAT_20210605.yaml']"
+    "psat_dict"
    ]
   },
   {
