--- a/pbdr_v2/SetFixedPsats.ipynb
+++ b/pbdr_v2/SetFixedPsats.ipynb
@@ -14,14 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHLAT_20210605.yaml    SAT_pole_20210605.yaml SPLAT_20210605.yaml\r\n"
+      "CHLAT_20210605.yaml             SAT_pole_hdpeLFMF_20210622.yaml\r\n",
+      "SAT_pole_20210605.yaml          SPLAT_20210605.yaml\r\n",
+      "SAT_pole_SiHF_20210622.yaml\r\n"
      ]
     }
    ],
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -77,15 +79,17 @@
       "HF_1  :    29.10\n",
       "HF_2  :    39.99\n",
       " \n",
-      "SAT_pole  Psat(pW)\n",
-      "LF_1  :     1.41\n",
-      "LF_2  :     6.13\n",
-      "MF1_1 :     7.39\n",
-      "MF1_2 :    12.21\n",
-      "MF2_1 :     7.66\n",
-      "MF2_2 :    13.29\n",
-      "HF_1  :    29.96\n",
-      "HF_2  :    39.16\n",
+      "SAT_poleLFMF  Psat(pW)\n",
+      "LF_1  :     1.40\n",
+      "LF_2  :     6.06\n",
+      "MF1_1 :     7.28\n",
+      "MF1_2 :    12.00\n",
+      "MF2_1 :     7.54\n",
+      "MF2_2 :    13.06\n",
+      " \n",
+      "SAT_poleHF  Psat(pW)\n",
+      "HF_1  :    29.63\n",
+      "HF_2  :    38.62\n",
       " \n",
       "===========================================================\n",
       "LAT Psats (Average of CHLAT and SPLAT for common bands)\n",
@@ -98,14 +102,14 @@
       "HF_2  :   47.636\n",
       "======================\n",
       "SAT Psats (Average of _1 and _2 in MF bands)\n",
-      "LF_1  :    1.408\n",
-      "LF_2  :    6.133\n",
-      "MF1_1 :    7.520\n",
-      "MF2_1 :    7.520\n",
-      "MF1_2 :   12.750\n",
-      "MF2_2 :   12.750\n",
-      "HF_1  :   29.959\n",
-      "HF_2  :   39.164\n"
+      "LF_1  :    1.396\n",
+      "LF_2  :    6.061\n",
+      "MF1_1 :    7.410\n",
+      "MF2_1 :    7.410\n",
+      "MF1_2 :   12.530\n",
+      "MF2_2 :   12.530\n",
+      "HF_1  :   29.634\n",
+      "HF_2  :   38.622\n"
      ]
     }
    ],
@@ -114,7 +118,8 @@
     "fixed_psats = {}\n",
     "yamlfiles = {'CHLAT':'CHLAT_20210605',\n",
     "             'SPLAT':'SPLAT_20210605',\n",
-    "             'SAT'  :'SAT_pole_20210605'}\n",
+    "             'SAT1' :'SAT_pole_hdpeLFMF_20210622',\n",
+    "             'SAT2' :'SAT_pole_SiHF_20210622'}\n",
     "\n",
     "print('Psats derived from optical power and Psat safety factor')\n",
     "for tel in yamlfiles.keys(): \n",
@@ -164,23 +169,100 @@
     "print('======================')\n",
     "print('SAT Psats (Average of _1 and _2 in MF bands)')\n",
     "\n",
-    "fixed_psats[yamlfiles['SAT']]['LF_1']= np.round(data['SAT_pole']['LF_1']['psat'],ddd)\n",
-    "fixed_psats[yamlfiles['SAT']]['LF_2']= np.round(data['SAT_pole']['LF_2']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT1']]['LF_1']= np.round(data['SAT_poleLFMF']['LF_1']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT1']]['LF_2']= np.round(data['SAT_poleLFMF']['LF_2']['psat'],ddd)\n",
     "\n",
-    "avg90 = np.round((data['SAT_pole']['MF1_1']['psat'] + data['SAT_pole']['MF2_1']['psat'])/2,ddd)\n",
-    "fixed_psats[yamlfiles['SAT']]['MF1_1']= avg90\n",
-    "fixed_psats[yamlfiles['SAT']]['MF2_1']= avg90\n",
+    "avg90 = np.round((data['SAT_poleLFMF']['MF1_1']['psat'] + data['SAT_poleLFMF']['MF2_1']['psat'])/2,ddd)\n",
+    "fixed_psats[yamlfiles['SAT1']]['MF1_1']= avg90\n",
+    "fixed_psats[yamlfiles['SAT1']]['MF2_1']= avg90\n",
     "#\n",
-    "avg150 = np.round((data['SAT_pole']['MF1_2']['psat'] + data['SAT_pole']['MF2_2']['psat'])/2,ddd)\n",
-    "fixed_psats[yamlfiles['SAT']]['MF1_2']= avg150\n",
-    "fixed_psats[yamlfiles['SAT']]['MF2_2']= avg150\n",
+    "avg150 = np.round((data['SAT_poleLFMF']['MF1_2']['psat'] + data['SAT_poleLFMF']['MF2_2']['psat'])/2,ddd)\n",
+    "fixed_psats[yamlfiles['SAT1']]['MF1_2']= avg150\n",
+    "fixed_psats[yamlfiles['SAT1']]['MF2_2']= avg150\n",
     "\n",
-    "fixed_psats[yamlfiles['SAT']]['HF_1']= np.round(data['SAT_pole']['HF_1']['psat'],ddd)\n",
-    "fixed_psats[yamlfiles['SAT']]['HF_2']= np.round(data['SAT_pole']['HF_2']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT2']]['HF_1']= np.round(data['SAT_poleHF']['HF_1']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT2']]['HF_2']= np.round(data['SAT_poleHF']['HF_2']['psat'],ddd)\n",
     "\n",
-    "for chan in fixed_psats[yamlfiles['SAT']].keys():\n",
-    "    print('{0:5s} : {1:8.3f}'.format(chan,fixed_psats[yamlfiles['SAT']][chan]))     \n",
+    "for chan in fixed_psats[yamlfiles['SAT1']].keys():\n",
+    "    print('{0:5s} : {1:8.3f}'.format(chan,fixed_psats[yamlfiles['SAT1']][chan]))     \n",
+    "for chan in fixed_psats[yamlfiles['SAT2']].keys():\n",
+    "    print('{0:5s} : {1:8.3f}'.format(chan,fixed_psats[yamlfiles['SAT2']][chan]))     \n",
+    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CHLAT_20210605': {'LF_1': 0.686,\n",
+       "  'LF_2': 3.965,\n",
+       "  'MF_1': 4.401,\n",
+       "  'MF_2': 12.199,\n",
+       "  'HF_1': 33.308,\n",
+       "  'HF_2': 47.636},\n",
+       " 'SPLAT_20210605': {'ULF_1': 0.406,\n",
+       "  'LF_1': 0.686,\n",
+       "  'LF_2': 3.965,\n",
+       "  'MF_1': 4.401,\n",
+       "  'MF_2': 12.199,\n",
+       "  'HF_1': 33.308,\n",
+       "  'HF_2': 47.636},\n",
+       " 'SAT_pole_hdpeLFMF_20210622': {},\n",
+       " 'SAT_pole_SiHF_20210622': {}}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fixed_psats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CHLAT': {'LF_1': {'psat': 0.6855981527506452},\n",
+       "  'LF_2': {'psat': 3.625274540618906},\n",
+       "  'MF_1': {'psat': 4.138045579296639},\n",
+       "  'MF_2': {'psat': 12.881304018415463},\n",
+       "  'HF_1': {'psat': 37.51364630268002},\n",
+       "  'HF_2': {'psat': 55.278270250645676}},\n",
+       " 'SPLAT': {'ULF_1': {'psat': 0.40607971104307855},\n",
+       "  'LF_1': {'psat': 0.6867501820413459},\n",
+       "  'LF_2': {'psat': 4.304658120263335},\n",
+       "  'MF_1': {'psat': 4.663977011750589},\n",
+       "  'MF_2': {'psat': 11.516984869436003},\n",
+       "  'HF_1': {'psat': 29.10236707927759},\n",
+       "  'HF_2': {'psat': 39.99444966747928}},\n",
+       " 'SAT_poleLFMF': {'LF_1': {'psat': 1.2392443657615442},\n",
+       "  'LF_2': {'psat': 5.8084811283747095},\n",
+       "  'MF1_1': {'psat': 6.640926497868591},\n",
+       "  'MF1_2': {'psat': 10.491718160831722},\n",
+       "  'MF2_1': {'psat': 6.8090642509402795},\n",
+       "  'MF2_2': {'psat': 11.339276648946933}},\n",
+       " 'SAT_poleHF': {'HF_1': {'psat': 26.479359328372695},\n",
+       "  'HF_2': {'psat': 34.995515852063335}}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -192,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
