--- a/pbdr_v2/SetFixedPsats.ipynb
+++ b/pbdr_v2/SetFixedPsats.ipynb
@@ -14,16 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHLAT_20210605.yaml             SAT_pole_hdpeLFMF_20210622.yaml\r\n",
-      "SAT_pole_20210605.yaml          SPLAT_20210605.yaml\r\n",
-      "SAT_pole_SiHF_20210622.yaml\r\n"
+      "CHLAT_20210605.yaml    SAT_LFMF_20210623.yaml SAT_pole_20210623.yaml\r\n",
+      "SAT_HF_20210623.yaml   SAT_pole_20210605.yaml SPLAT_20210605.yaml\r\n"
      ]
     }
    ],
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -79,17 +78,17 @@
       "HF_1  :    29.10\n",
       "HF_2  :    39.99\n",
       " \n",
-      "SAT_poleLFMF  Psat(pW)\n",
-      "LF_1  :     1.40\n",
-      "LF_2  :     6.06\n",
-      "MF1_1 :     7.28\n",
-      "MF1_2 :    12.00\n",
-      "MF2_1 :     7.54\n",
-      "MF2_2 :    13.06\n",
+      "SAT_LFMF  Psat(pW)\n",
+      "LF_1  :     1.29\n",
+      "LF_2  :     6.01\n",
+      "MF1_1 :     7.06\n",
+      "MF1_2 :    11.91\n",
+      "MF2_1 :     7.38\n",
+      "MF2_2 :    12.96\n",
       " \n",
-      "SAT_poleHF  Psat(pW)\n",
-      "HF_1  :    29.63\n",
-      "HF_2  :    38.62\n",
+      "SAT_HF    Psat(pW)\n",
+      "HF_1  :    29.30\n",
+      "HF_2  :    38.06\n",
       " \n",
       "===========================================================\n",
       "LAT Psats (Average of CHLAT and SPLAT for common bands)\n",
@@ -102,14 +101,14 @@
       "HF_2  :   47.636\n",
       "======================\n",
       "SAT Psats (Average of _1 and _2 in MF bands)\n",
-      "LF_1  :    1.396\n",
-      "LF_2  :    6.061\n",
-      "MF1_1 :    7.410\n",
-      "MF2_1 :    7.410\n",
-      "MF1_2 :   12.530\n",
-      "MF2_2 :   12.530\n",
-      "HF_1  :   29.634\n",
-      "HF_2  :   38.622\n"
+      "LF_1  :    1.295\n",
+      "LF_2  :    6.014\n",
+      "MF1_1 :    7.219\n",
+      "MF2_1 :    7.219\n",
+      "MF1_2 :   12.432\n",
+      "MF2_2 :   12.432\n",
+      "HF_1  :   29.298\n",
+      "HF_2  :   38.064\n"
      ]
     }
    ],
@@ -118,8 +117,8 @@
     "fixed_psats = {}\n",
     "yamlfiles = {'CHLAT':'CHLAT_20210605',\n",
     "             'SPLAT':'SPLAT_20210605',\n",
-    "             'SAT1' :'SAT_pole_hdpeLFMF_20210622',\n",
-    "             'SAT2' :'SAT_pole_SiHF_20210622'}\n",
+    "             'SAT1' :'SAT_LFMF_20210623',\n",
+    "             'SAT2' :'SAT_HF_20210623'}\n",
     "\n",
     "print('Psats derived from optical power and Psat safety factor')\n",
     "for tel in yamlfiles.keys(): \n",
@@ -169,19 +168,19 @@
     "print('======================')\n",
     "print('SAT Psats (Average of _1 and _2 in MF bands)')\n",
     "\n",
-    "fixed_psats[yamlfiles['SAT1']]['LF_1']= np.round(data['SAT_poleLFMF']['LF_1']['psat'],ddd)\n",
-    "fixed_psats[yamlfiles['SAT1']]['LF_2']= np.round(data['SAT_poleLFMF']['LF_2']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT1']]['LF_1']= np.round(data['SAT_LFMF']['LF_1']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT1']]['LF_2']= np.round(data['SAT_LFMF']['LF_2']['psat'],ddd)\n",
     "\n",
-    "avg90 = np.round((data['SAT_poleLFMF']['MF1_1']['psat'] + data['SAT_poleLFMF']['MF2_1']['psat'])/2,ddd)\n",
+    "avg90 = np.round((data['SAT_LFMF']['MF1_1']['psat'] + data['SAT_LFMF']['MF2_1']['psat'])/2,ddd)\n",
     "fixed_psats[yamlfiles['SAT1']]['MF1_1']= avg90\n",
     "fixed_psats[yamlfiles['SAT1']]['MF2_1']= avg90\n",
     "#\n",
-    "avg150 = np.round((data['SAT_poleLFMF']['MF1_2']['psat'] + data['SAT_poleLFMF']['MF2_2']['psat'])/2,ddd)\n",
+    "avg150 = np.round((data['SAT_LFMF']['MF1_2']['psat'] + data['SAT_LFMF']['MF2_2']['psat'])/2,ddd)\n",
     "fixed_psats[yamlfiles['SAT1']]['MF1_2']= avg150\n",
     "fixed_psats[yamlfiles['SAT1']]['MF2_2']= avg150\n",
     "\n",
-    "fixed_psats[yamlfiles['SAT2']]['HF_1']= np.round(data['SAT_poleHF']['HF_1']['psat'],ddd)\n",
-    "fixed_psats[yamlfiles['SAT2']]['HF_2']= np.round(data['SAT_poleHF']['HF_2']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT2']]['HF_1']= np.round(data['SAT_HF']['HF_1']['psat'],ddd)\n",
+    "fixed_psats[yamlfiles['SAT2']]['HF_2']= np.round(data['SAT_HF']['HF_2']['psat'],ddd)\n",
     "\n",
     "for chan in fixed_psats[yamlfiles['SAT1']].keys():\n",
     "    print('{0:5s} : {1:8.3f}'.format(chan,fixed_psats[yamlfiles['SAT1']][chan]))     \n",
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -212,57 +211,22 @@
        "  'MF_2': 12.199,\n",
        "  'HF_1': 33.308,\n",
        "  'HF_2': 47.636},\n",
-       " 'SAT_pole_hdpeLFMF_20210622': {},\n",
-       " 'SAT_pole_SiHF_20210622': {}}"
+       " 'SAT_LFMF_20210623': {'LF_1': 1.295,\n",
+       "  'LF_2': 6.014,\n",
+       "  'MF1_1': 7.219,\n",
+       "  'MF2_1': 7.219,\n",
+       "  'MF1_2': 12.432,\n",
+       "  'MF2_2': 12.432},\n",
+       " 'SAT_HF_20210623': {'HF_1': 29.298, 'HF_2': 38.064}}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fixed_psats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'CHLAT': {'LF_1': {'psat': 0.6855981527506452},\n",
-       "  'LF_2': {'psat': 3.625274540618906},\n",
-       "  'MF_1': {'psat': 4.138045579296639},\n",
-       "  'MF_2': {'psat': 12.881304018415463},\n",
-       "  'HF_1': {'psat': 37.51364630268002},\n",
-       "  'HF_2': {'psat': 55.278270250645676}},\n",
-       " 'SPLAT': {'ULF_1': {'psat': 0.40607971104307855},\n",
-       "  'LF_1': {'psat': 0.6867501820413459},\n",
-       "  'LF_2': {'psat': 4.304658120263335},\n",
-       "  'MF_1': {'psat': 4.663977011750589},\n",
-       "  'MF_2': {'psat': 11.516984869436003},\n",
-       "  'HF_1': {'psat': 29.10236707927759},\n",
-       "  'HF_2': {'psat': 39.99444966747928}},\n",
-       " 'SAT_poleLFMF': {'LF_1': {'psat': 1.2392443657615442},\n",
-       "  'LF_2': {'psat': 5.8084811283747095},\n",
-       "  'MF1_1': {'psat': 6.640926497868591},\n",
-       "  'MF1_2': {'psat': 10.491718160831722},\n",
-       "  'MF2_1': {'psat': 6.8090642509402795},\n",
-       "  'MF2_2': {'psat': 11.339276648946933}},\n",
-       " 'SAT_poleHF': {'HF_1': {'psat': 26.479359328372695},\n",
-       "  'HF_2': {'psat': 34.995515852063335}}}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
    ]
   },
   {
@@ -274,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
