Added spider 280GHz nylon constraint

--- a/pbdr_v2/InputsNotes.ipynb
+++ b/pbdr_v2/InputsNotes.ipynb
@@ -31,7 +31,11 @@
     "\n",
     "Nylon loss:\n",
     "- Halpern, Gush, Wishnow and de Cosmo, https://www.osapublishing.org/ao/abstract.cfm?uri=ao-25-4-565\n",
-    "- This is not well-charcterized by a loss tangent;  the alpha goes as $\\nu^{2.9}$ rather than $\\nu^1$.  We work out the loss for each band center, below.\n",
+    "- They fit absorption to a model with $ T \\propto e^{-\\alpha z}$, with $\\alpha = a \\nu^b$.\n",
+    "    \n",
+    "- They find alpha goes as $\\nu^{2.9}$ rather than the $\\nu^1$ expected for a loss tangent model.   A footnote in their paper says their $a$ and $b$ for nylon are not precise, but should only be used as \"guides\".\n",
+    "    \n",
+    "- The Spider group did a run with a 1\" thick nylon filter (rather than the usual 3/32\") and found the 280GHz in-band optical efficiency went down by a factor of about 2/3.  Using the $a$ from Halpern etal and adjusting $b$ to agree with this measurement gives $b = 2.6$.  (We could have adjusted $a$ instead, or both).  We proceed with this value of $b$, understanding that this is not a great constraint and needs better data.  \n",
     "\n",
     "<BR>\n",
     "        \n",
@@ -50,12 +54,12 @@
    "source": [
     "## Nylon filter \n",
     "Currently used only the SATs.\n",
-    "7.5mm thick"
+    "Specified in PBDR as 7.5mm thick for all bands.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -63,14 +67,14 @@
      "output_type": "stream",
      "text": [
       "SAT\n",
-      "nu =  25.8 GHz, icm=0.86, alpha=0.000, Abs =  0.0002\n",
-      "nu =  38.8 GHz, icm=1.29, alpha=0.001, Abs =  0.0008\n",
-      "nu =  85.0 GHz, icm=2.83, alpha=0.010, Abs =  0.0077\n",
-      "nu =  95.0 GHz, icm=3.17, alpha=0.014, Abs =  0.0106\n",
-      "nu = 145.0 GHz, icm=4.83, alpha=0.048, Abs =  0.0355\n",
-      "nu = 155.0 GHz, icm=5.17, alpha=0.059, Abs =  0.0429\n",
-      "nu = 227.0 GHz, icm=7.57, alpha=0.177, Abs =  0.1243\n",
-      "nu = 285.5 GHz, icm=9.52, alpha=0.344, Abs =  0.2274\n"
+      "nu =  25.8 GHz, icm=0.86, alpha=0.000, Abs =  0.0003\n",
+      "nu =  38.8 GHz, icm=1.29, alpha=0.001, Abs =  0.0007\n",
+      "nu =  85.0 GHz, icm=2.83, alpha=0.007, Abs =  0.0056\n",
+      "nu =  95.0 GHz, icm=3.17, alpha=0.010, Abs =  0.0075\n",
+      "nu = 145.0 GHz, icm=4.83, alpha=0.030, Abs =  0.0223\n",
+      "nu = 155.0 GHz, icm=5.17, alpha=0.036, Abs =  0.0265\n",
+      "nu = 227.0 GHz, icm=7.57, alpha=0.096, Abs =  0.0698\n",
+      "nu = 285.5 GHz, icm=9.52, alpha=0.175, Abs =  0.1230\n"
      ]
     }
    ],
@@ -90,8 +94,9 @@
     "\n",
     "# From Halpern etal\n",
     "a_nylon = 5e-4\n",
-    "b_nylon = 2.9\n",
+    "b_nylon = 2.6   # Halpern says 2.9, we renormalize to Spider and get 2.6.\n",
     "delta_z = 0.75 #cm\n",
+    "#delta_z = 2.30 #cm  (Use to check Spider 0.33 abs at 280GHz)\n",
     "\n",
     "for tel in telescopes:\n",
     "    print(tel)\n",
@@ -103,6 +108,13 @@
     "        abs_nylon = 1-transmission_nylon  \n",
     "        print('nu = {0:5.1f} GHz, icm={1:4.2f}, alpha={2:4.3f}, Abs = {3:7.4f}'.format(nu, icm, alpha_nylon, abs_nylon))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
