updated yamls, reran everything.

--- a/pbdr_v2/SetFixedPsats.ipynb
+++ b/pbdr_v2/SetFixedPsats.ipynb
@@ -14,15 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHLAT_20210605.yaml    SAT_LFMF_20210623.yaml SAT_pole_20210623.yaml\r\n",
-      "SAT_HF_20210623.yaml   SAT_pole_20210605.yaml SPLAT_20210605.yaml\r\n"
+      "CHLAT_20210605.yaml    SAT_LFMF_20210623.yaml SPLAT_20210605.yaml\r\n",
+      "CHLAT_20210714.yaml    SAT_LFMF_20210714.yaml SPLAT_20210714.yaml\r\n",
+      "SAT_HF_20210623.yaml   SAT_pole_20210605.yaml\r\n",
+      "SAT_HF_20210714.yaml   SAT_pole_20210623.yaml\r\n"
      ]
     }
    ],
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -62,63 +64,63 @@
      "text": [
       "Psats derived from optical power and Psat safety factor\n",
       "CHLAT     Psat(pW)\n",
-      "LF_1  :     0.69\n",
-      "LF_2  :     3.63\n",
-      "MF_1  :     4.14\n",
-      "MF_2  :    12.88\n",
-      "HF_1  :    37.51\n",
-      "HF_2  :    55.28\n",
+      "LF_1  :     0.81\n",
+      "LF_2  :     4.12\n",
+      "MF_1  :     4.68\n",
+      "MF_2  :    14.19\n",
+      "HF_1  :    37.55\n",
+      "HF_2  :    51.05\n",
       " \n",
       "SPLAT     Psat(pW)\n",
-      "ULF_1 :     0.41\n",
-      "LF_1  :     0.69\n",
-      "LF_2  :     4.30\n",
-      "MF_1  :     4.66\n",
-      "MF_2  :    11.52\n",
-      "HF_1  :    29.10\n",
-      "HF_2  :    39.99\n",
+      "ULF_1 :     0.40\n",
+      "LF_1  :     0.68\n",
+      "LF_2  :     4.24\n",
+      "MF_1  :     4.52\n",
+      "MF_2  :    10.83\n",
+      "HF_1  :    25.84\n",
+      "HF_2  :    33.80\n",
       " \n",
       "SAT_LFMF  Psat(pW)\n",
-      "LF_1  :     1.29\n",
-      "LF_2  :     6.01\n",
-      "MF1_1 :     7.06\n",
-      "MF1_2 :    11.91\n",
-      "MF2_1 :     7.38\n",
-      "MF2_2 :    12.96\n",
+      "LF_1  :     1.43\n",
+      "LF_2  :     6.42\n",
+      "MF1_1 :     7.65\n",
+      "MF1_2 :    13.75\n",
+      "MF2_1 :     8.06\n",
+      "MF2_2 :    14.75\n",
       " \n",
       "SAT_HF    Psat(pW)\n",
-      "HF_1  :    29.30\n",
-      "HF_2  :    38.06\n",
+      "HF_1  :    33.03\n",
+      "HF_2  :    40.62\n",
       " \n",
       "===========================================================\n",
       "LAT Psats (Average of CHLAT and SPLAT for common bands)\n",
-      "ULF_1 :    0.406\n",
-      "LF_1  :    0.686\n",
-      "LF_2  :    3.965\n",
-      "MF_1  :    4.401\n",
-      "MF_2  :   12.199\n",
-      "HF_1  :   33.308\n",
-      "HF_2  :   47.636\n",
+      "ULF_1 :    0.403\n",
+      "LF_1  :    0.747\n",
+      "LF_2  :    4.177\n",
+      "MF_1  :    4.598\n",
+      "MF_2  :   12.513\n",
+      "HF_1  :   31.698\n",
+      "HF_2  :   42.426\n",
       "======================\n",
       "SAT Psats (Average of _1 and _2 in MF bands)\n",
-      "LF_1  :    1.295\n",
-      "LF_2  :    6.014\n",
-      "MF1_1 :    7.219\n",
-      "MF2_1 :    7.219\n",
-      "MF1_2 :   12.432\n",
-      "MF2_2 :   12.432\n",
-      "HF_1  :   29.298\n",
-      "HF_2  :   38.064\n"
+      "LF_1  :    1.432\n",
+      "LF_2  :    6.417\n",
+      "MF1_1 :    7.858\n",
+      "MF2_1 :    7.858\n",
+      "MF1_2 :   14.251\n",
+      "MF2_2 :   14.251\n",
+      "HF_1  :   33.033\n",
+      "HF_2  :   40.621\n"
      ]
     }
    ],
    "source": [
     "data = {}\n",
     "fixed_psats = {}\n",
-    "yamlfiles = {'CHLAT':'CHLAT_20210605',\n",
-    "             'SPLAT':'SPLAT_20210605',\n",
-    "             'SAT1' :'SAT_LFMF_20210623',\n",
-    "             'SAT2' :'SAT_HF_20210623'}\n",
+    "yamlfiles = {'CHLAT':'CHLAT_20210714',\n",
+    "             'SPLAT':'SPLAT_20210714',\n",
+    "             'SAT1' :'SAT_LFMF_20210714',\n",
+    "             'SAT2' :'SAT_HF_20210714'}\n",
     "\n",
     "print('Psats derived from optical power and Psat safety factor')\n",
     "for tel in yamlfiles.keys(): \n",
@@ -192,35 +194,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CHLAT_20210605': {'LF_1': 0.686,\n",
-       "  'LF_2': 3.965,\n",
-       "  'MF_1': 4.401,\n",
-       "  'MF_2': 12.199,\n",
-       "  'HF_1': 33.308,\n",
-       "  'HF_2': 47.636},\n",
-       " 'SPLAT_20210605': {'ULF_1': 0.406,\n",
-       "  'LF_1': 0.686,\n",
-       "  'LF_2': 3.965,\n",
-       "  'MF_1': 4.401,\n",
-       "  'MF_2': 12.199,\n",
-       "  'HF_1': 33.308,\n",
-       "  'HF_2': 47.636},\n",
-       " 'SAT_LFMF_20210623': {'LF_1': 1.295,\n",
-       "  'LF_2': 6.014,\n",
-       "  'MF1_1': 7.219,\n",
-       "  'MF2_1': 7.219,\n",
-       "  'MF1_2': 12.432,\n",
-       "  'MF2_2': 12.432},\n",
-       " 'SAT_HF_20210623': {'HF_1': 29.298, 'HF_2': 38.064}}"
+       "{'CHLAT_20210714': {'LF_1': 0.747,\n",
+       "  'LF_2': 4.177,\n",
+       "  'MF_1': 4.598,\n",
+       "  'MF_2': 12.513,\n",
+       "  'HF_1': 31.698,\n",
+       "  'HF_2': 42.426},\n",
+       " 'SPLAT_20210714': {'ULF_1': 0.403,\n",
+       "  'LF_1': 0.747,\n",
+       "  'LF_2': 4.177,\n",
+       "  'MF_1': 4.598,\n",
+       "  'MF_2': 12.513,\n",
+       "  'HF_1': 31.698,\n",
+       "  'HF_2': 42.426},\n",
+       " 'SAT_LFMF_20210714': {'LF_1': 1.432,\n",
+       "  'LF_2': 6.417,\n",
+       "  'MF1_1': 7.858,\n",
+       "  'MF2_1': 7.858,\n",
+       "  'MF1_2': 14.251,\n",
+       "  'MF2_2': 14.251},\n",
+       " 'SAT_HF_20210714': {'HF_1': 33.033, 'HF_2': 40.621}}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
