lots of work on variations.

--- a/pbdr_v2/InputsNotes.ipynb
+++ b/pbdr_v2/InputsNotes.ipynb
@@ -43,7 +43,7 @@
     "    - Dutta etal, https://arxiv.org/pdf/1307.4715.pdf , gives an upper limit of 8e-5 at and below 30K for the worse (lower Ohm-cm) of their two samples.  So, 8e-5 would be very very conservative;  5e-5 is probably conservative as well.  McMahon suspects 1E-5, but no measurements back that up.\n",
     " \n",
     "- HDPE:  \n",
-    "    - At ~4K (lenses), have been using tan$\\delta$ = 0.8E-4, but I don't know the source of this.  I'm changing it to 1.0E-4.\n",
+    "    - At ~4K (lenses), I have been using tan$\\delta$ = 0.8E-4, but I don't know the source of this.  I'm changing it to 1.0E-4.\n",
     "    - At ~300K (the window, really UHMWPE), we have been using 2E-4, which is the number Brad Benson uses (citing Lamb) for SPT3g.  However, Lamb does not have specific entries for UHMWPE.  His numbers for HDPE range from 2.1 to 3.9 in our frequency range, so I am going to change this to 3E-4 for the window.\n",
     "    - Window has been set to 273K;  I'm setting it to 250K at Pole for SPLAT and SAT.\n",
     "    - The LAT windows have been set to 3mm ~ 1/8\".  I'm setting them now to 4.75mm ~ 3/16\", because that is what the engineers say we need for safety.\n",
