Updated psat factor range

--- a/pbdr_v2/all_variations.ipynb
+++ b/pbdr_v2/all_variations.ipynb
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "#Psat Factor\n",
-    "xparam_vec = np.arange(.5, 3.0, .1)\n",
+    "xparam_vec = np.arange(2.0, 4.0, .1)\n",
     "\n",
     "#run variation (non-fixed psats)\n",
     "bcv.net_v_PsatFac(xparam_vec, yaml_list)"
